--- a/Microbiome_Diversity.Rmd
+++ b/Microbiome_Diversity.Rmd
@@ -33,23 +33,23 @@ theme_set(theme_minimal())
 ```
 
 
-> Do I contradict myself? 
->Very well then I contradict myself,
-> (I am large, I contain multitudes.) 
-`r tufte::quote_footer('--- Walt Whitman, [Song of Myself](https://www.poetryfoundation.org/poems/45477/song-of-myself-1892-version)]')`
+> Do I contradict myself?  
+>Very well then I contradict myself,  
+> (I am large, I contain multitudes.)  
+`r tufte::quote_footer('--- Walt Whitman, [Song of Myself](https://www.poetryfoundation.org/poems/45477/song-of-myself-1892-version)')`
 
 
 # The human as an ecosystem
-From the origins of germ theory until quite recently our view of microbes was largely a negative one. They were parasites, decomposers, necessary but rather unwelcome members of the tree of life.  As for their place in or on us? Well, we could tolerate them so long as they did not do too much harm, but we would probably be better off if we washed more thoroughly! It is thus pretty remarkable, at least to me, how much our view on microbes has changed in the last few decades. We now recognize that microbial life---Bacteria, Archaea, fungi, even protists and protozoa---is much, much more diverse and much, much more common than we'd previously recognized. 
+From the origins of germ theory until quite recently our view of microbes was largely a negative one. They were parasites and decomposers, necessary but rather unwelcome members of the tree of life.  And microbes in or on us? Well, we could tolerate them so long as they did not do too much harm, but we would probably be better off if we washed more thoroughly! It is thus pretty remarkable, at least to me, how much our view on microbes has changed in the last few decades. We now recognize that microbial life---Bacteria, Archaea, fungi, even protists and protozoa---is much, much more diverse and also much, much more common than we had previously recognized. 
 
-We also know that much of what we, as humans, are is microbial. Estimates are converging on about 1.3 (range of 1 -- 3) bacterial cells in or on our body per human cell in healthy adults^[You might have heard estimates of 10 to 1, but apparently these were based on early back-of-the envelope calculations. [Gilbert et al. 2018. Current understanding of the human microbiome. Nature Medicine 24:392-400.](https://www.nature.com/articles/nm.4517).], not to mention the various fungi and viruses you or I harbor. Each of us is, in a very real sense^[At least by cell number. Our eukaryotic cells are larger and thus make up more biomass than our microbial partners.], more symbionts than host; more bacterial than eukaryotic! And it is not just that there is "me,"  a body of comprised of eukaryotic cells derived from sperm and egg, with a thin veneer of an admittedly large number of symbiotic hangers on. No, as we shall see, the "me" I think about is very much the product of the interactions between my eukaryotic cells and my symbiotic partners. _I_ am really _we_^[There is far too much to even briefly mention. So instead let me point you to the terrific book by Ed Yong on the microbiome with a title riffing on Whitman's poem, [_I Contain Multitudes: The Microbes Within Us and a Grander View of Life_](https://edyong.me/i-contain-multitudes).].
+We have also come to recognize that much of what we, as humans, are is microbial. Estimates are converging on about 1.3 (range of 1 -- 3) bacterial^[To be clear, when I say "bacteria" I mean both Bacteria and Archaea, which are quite divergent!] cells in or on our body per human cell in healthy adults^[You might have heard estimates of 10 to 1, but apparently these were based on early back-of-the envelope calculations. See [Gilbert et al. 2018. Current understanding of the human microbiome. Nature Medicine 24:392-400.](https://www.nature.com/articles/nm.4517).], not to mention the various fungi and viruses you or I harbor. Each of us is, in a very real sense, more symbionts than host^[At least by cell number. Our eukaryotic cells are larger and thus make up more biomass than our microbial partners.]; more bacterial than eukaryotic! And it is not just that there is "me,"  a body comprised of eukaryotic cells derived from sperm and egg, with a thin veneer of an admittedly large number of symbiotic hangers on. No, as we shall see, the "me" I think about is very much the product of the interactions between my eukaryotic cells and my symbiotic partners. _I_ am really _we_^[There is far too much to even briefly mention. So instead let me point you to the terrific book by Ed Yong on the microbiome with a title riffing on Whitman's poem, [_I Contain Multitudes: The Microbes Within Us and a Grander View of Life_](https://edyong.me/i-contain-multitudes).].
 
 # The human as a diversity hotspot
-In addition to sheer numbers, we harbor an [awful lot of microbial _diversity_](https://en.wikipedia.org/wiki/List_of_human_microbiota), too, on our skin, in our guts, in our mouths, and so on. How many species? It turns out that is a tricky question to answer clearly, in part because of how we detect and measure this diversity. The vast majority of bacteria are not culturable; we only know of them through their genetic sequences. In rough outline samples from the skin or gut or whatever are collected, all of the DNA extracted, and then short sequences of random bits of DNA from the sample are then sequenced. Computer algorithms are then used to compare these sequences to each other to find overlapping regions and make longer sequences, which are then compared to databases of sequences, and run through yet other algorithms to estimate the number of species (or sometimes gene families or metabolic pathways). So the question of how many species depends on how much sampling you've done (although there are ways of estimating the whole sample from a part), the methods you used, and how you define a species. 
+In addition to sheer numbers, we harbor an [awful lot of microbial _diversity_](https://en.wikipedia.org/wiki/List_of_human_microbiota), too, on our skin, in our guts, in our mouths, and so on. How many species? It turns out that is a tricky question to answer clearly, in part because of how we detect and measure this diversity. The vast majority of bacteria are not culturable; we only know of them through their genetic sequences. In rough outline samples from the skin or gut or whatever are collected, all of the DNA extracted, and then short sequences of random bits of DNA from the sample are then sequenced. Computer algorithms are then used to compare these sequences to each other to find overlapping regions and make longer sequences, which are then compared to databases of sequences, and run through yet other algorithms to estimate the number of species (or sometimes gene families or metabolic pathways). So the question of how many species depends on how much sampling you've done^[Although there are ways of estimating the whole sample from a part.], the methods you used, and how you define a species. 
 
-Anyway, rough estimates are on the order 500 to 1000 bacterial species per person^[See Gilbert et al. 2018.]. That is a lot of diversity, but it actually pretty conservative. There is enough genetic diversity in these samples to suggest something on the order of 20 -- 50 subspecies or strains per bacterial species^[[Tierney et al. 2019. The Landscape of Genetic Content in the Gut and Oral Human Microbiome. Cell Host Microbe 26:283-295.e8](https://pubmed.ncbi.nlm.nih.gov/31415755)]. What's more, one recent analysis of some 3,655 samples found over 45,000,000 "non-redundant" genes, _half_ of which were only found once! It is a staggering amount of genetic diversity in humans^[Moreover, most samples come from American and Western European people; there is much more diversity to be found!]. 
+Anyway, rough estimates are on the order 500 to 1000 bacterial species per person^[See Gilbert et al. 2018.]. That is a lot of diversity, but it actually pretty conservative. There is enough genetic diversity in these samples to suggest something on the order of 20 -- 50 subspecies or strains per bacterial species^[[Tierney et al. 2019. The Landscape of Genetic Content in the Gut and Oral Human Microbiome. Cell Host Microbe 26:283-295.e8](https://pubmed.ncbi.nlm.nih.gov/31415755)]. One recent analysis of some 3,655 samples found over 45,000,000 "non-redundant" genes! What's more, people often play host to unique microbes. Of those 45 million genes, _half_ were only found once! It is a staggering amount of genetic diversity in humans^[Moreover, most samples come from American and Western European people; there is much more diversity to be found!]. 
 
-We have only begun to grasp this diversity in the last decade or so; the Human Microbiome Project, for instance, published its initial results in 2012. What is becoming clear is that while there are some commonalities, the microbiomes of different people can be quite different, and even the microbiome of an individual can change quite a lot over time. The microbial community even changes dramatically between different parts of the body!
+We have only begun to grasp this diversity in the last decade or so. The Human Microbiome Project, for instance, published its initial results in 2012. What is becoming clear is that while there are some commonalities, the microbiomes of different people can be quite different, and even the microbiome of an individual can change quite a lot over time. The microbial community even changes dramatically between different parts of the body!
 
 
 ```{r, fig.margin=FALSE, fig.cap="Major suborders of bacteria (colors) found on different parts the skin of a human. Illustration by Darryl Leja for the National Human Genome Research Institute (www.genome.gov)."}
@@ -60,27 +60,66 @@ knitr::include_graphics("Skin_Microbiome.png", dpi=200)
 
 # The human as a rainforest, or how do we end up hosting such amazing diversity?
 
-Important to note that an animal is, from the point of view of a microbe, a very large, very heterogeneous place. Our microbiomes are less the Petri dish you might think of when you think of microbes and much more a rainforest with all the nooks and crannies that calls to mind. At a course scale, the skin is quite different from the mouth is different from the gut, but the skin on the forearm is pretty different than that on the toe or armpit or groin. The upper part of the GI is different from the lower end, the bends are probably different from the straight bits. Even within the mouth, the front of the mouth is pretty different from the back, the outside of the teeth from the parts between (which you really should be reaching with floss!). When I say different, I mean different temperatures, pH, oxygen availability, physical stability, nutrient availability, neighbors and more.  In other words, what may at first seem like a fairly homogeneous environment (e.g., your gastrointestinal tract) actually offers a diversity of habitats. 
+It is important to note that an animal is, from the point of view of a microbe, a very large, very heterogeneous place. Our microbiomes are less the Petri dish you might think of when you think of microbes and much more a rainforest with all the nooks and crannies that calls to mind. At a course scale, the skin is quite different from the mouth is different from the gut, but at a finer scale the skin on the arm is pretty different than that on the toe or armpit or groin, and even the forearm is different than the elbow. The upper part of the GI is different from the lower end, the bends are probably different from the straight bits^[[Martinez-Guryn et al. 2019. Regional Diversity of the Gastrointestinal Microbiome. Cell Host Microbe 26:314-324](https://pubmed.ncbi.nlm.nih.gov/31513770)]. Even within the mouth, the tongue is different from the cheeks which are different from the teeth, the outward-facing sides of the teeth are different from the parts in-between (which you really should be reaching with floss!). When I say different, I mean different temperatures, pH, oxygen availability, physical stability, substrates, nutrient availability, neighbors and more.  In other words, what may at first seem like a fairly homogeneous environment (e.g., your gastrointestinal tract) actually offers a diversity of habitats. 
 
 
-```{r, fig.fullwidth = TRUE, fig.cap="A tour of host conditions and representative members of the microbial community throughout the gastrointestinal tract. From [Martinez-Guryn et al. 2019 Regional Diversity of the Gastrointestinal Microbiome. Cell Host Microbe 26:314-324](https://pubmed.ncbi.nlm.nih.gov/31513770)"}
+```{r, fig.fullwidth = TRUE, fig.cap="A tour of host conditions and representative members of the microbial community throughout the gastrointestinal tract. From Martinez-Guryn et al. 2019."}
 
 knitr::include_graphics("Gut_Microbiome_Envt.png", dpi=300)
 ```
 
 
-This variation in habitat is mirrored by variation in microbial species. After all, while some microbes can inhabit a wide range of conditions and use a variety of substrates as food, others  can be very specialized (again, just like in a rainforest). A certain species may grow (or persist) best in one particular place,  at least relative to others, and another might "prefer" another. This can result in what we call **niche partitioning**. The niche^[Well, there are actually many definitions of "niche". I am using Hutchinson's n-dimensional hyper volume, which is a way of thinking about a species' fundamental niche.], as you've probably learned at some point in your past, can be defined as the suite of conditions and resources required for individuals of a species to survive, grow, and reproduce. Presumably^[I say presumably because this is very difficult to demonstrate.] evolutionary processes often lead to species having different niches from one another (e.g., perhaps surviving at different temperatures, requiring different amounts of Fe and K, and so on), which leads to less competition between species.
+This variation in habitat is mirrored by variation in microbial species. After all, while some microbes can inhabit a wide range of conditions and use a variety of substrates as food, others may be very specialized (again, just like in a rainforest). A certain species may grow (or persist) best in one particular place,  at least relative to others, while another species might "prefer" another place. This can result in what we call **niche partitioning**. The niche^[There are actually many definitions of "niche". I am using Hutchinson's n-dimensional hyper volume, which is a way of thinking about a species' fundamental niche. Importantly, a niche is not a physical place, but a set of conditions and resources. We would refer to the physical places a species as found as its range or distribution.], as you've probably learned at some point in your past, can be defined as the suite of conditions and resources required for individuals of a species to survive, grow, and reproduce. Presumably^[I say presumably because this is very difficult to demonstrate.] evolutionary processes often lead to species having different niches from one another (e.g., perhaps surviving at different temperatures, requiring different amounts of Fe and K, and so on), which leads to less competition between species.
 
-Certainly there is some fine-scale matching between the niches of microbial species and the distinct nooks and crannies in and on us.  But this alone cannot explain the tremendous diversity we observe. Again, this is an active area of research^[Meaning that we really do not know!]. Still, we can think through this in the same way we might ask about the diversity in any community^[Yes, it is very cool to think of ourselves as ecosystems, and we are, but we are not exactly unique as ecosystems. What applies to the Palouse or a rainforest applies equally well to us!].  
+Certainly there is some fine-scale matching between the niches of microbial species and the distinct nooks and crannies in and on us.  But this alone cannot explain the tremendous diversity we observe. What, then, produces this diversity? This is an active area of research^[Meaning that we really do not know!]. Still, we can think through it in the same way we might ask about the diversity in any community^[Yes, it is very cool to think of ourselves as ecosystems---we are!---but we are not exactly unique as ecosystems. What applies to the Palouse or a rainforest applies equally well to us!].  
 
-First, it is important to note that the microbes in and on us ultimately come from our environment, from the birth canal and our mothers's milk to all that dirt we eat and air we breath. But it is not as if _everything_ we come across successfully colonizes. Our microbiome is a small, unique subset of bacteria in the broader world. That is, there is a great deal of selection against most bacteria we come across; most do not make the cut! Interestingly, if you change your, say, internal environmental conditions (e.g., become a vegetarian or get a GI infection), the composition of the microbiome changes somewhat in response. So know that only a subset microbes can actually be part of our microbiomes.
+First, it is important to note that the microbes in and on us ultimately come from our environment, from the birth canal and our mother's milk to all that dirt we eat at kids and the air we breath. But it is not as if _everything_ we come across successfully colonizes us. Our microbiome is a small, unique subset of bacteria in the broader world. That is, there is a great deal of selection against most bacteria we encounter; most do not make the cut! Interestingly, if you change your, say, internal environmental conditions (e.g., become a vegetarian or get a GI infection), the composition of your gut microbiome changes somewhat in response. The conditions do matter! In any case, recognize that only a subset microbes can actually be part of our microbiomes.
 
-But focusing on those potential colonists, what controls whether they establish or not? Or in other words, how does our microbiome develop? Again, it's an act area of research, but let me offer three "models" of community assembly^[First introduced by Connell & Slatyer in 1977 ([Am Nat 111:1119-1144](https://www.journals.uchicago.edu/doi/10.1086/283241)), these models still influence our thinking of community dynamics.] that may help explain why we end up with the communities we do. I do not want to imply that this is exactly what is happening in our guts, but it does help illustrate the processes that may be at work, as well as how ecologists think through such a process.
+But focusing on those potential successful colonists, what controls whether they establish or not? Or in other words, how does our microbiome develop? Again, it's an active area of research, but let me offer three "models" of community assembly^[Introduced by Connell & Slatyer in 1977 ([Am Nat 111:1119-1144](https://www.journals.uchicago.edu/doi/10.1086/283241)), and largely applied to plant communities, these models still influence our thinking of community dynamics in general.] that may help explain why we end up with the communities we do. I do not want to imply that these processes are what is happening in our guts, at least not exactly, but it does help illustrate the processes that may be at work, as well as how ecologists think through such a process.
 
-1. **Inhibition (or Preemption)**. This is a simple model that says that whatever arrives first prevents other things from taking that spot. As in, this stretch of the duodenum only has so many seats, and once species X is in that spot, it won't leave until it dies or some physical force removes it. Over time this sort of model suggests a shift from early colonists to a stable community of long-lived species.  
+1. **Inhibition (or Preemption)**. This is a simple model that says that whatever arrives first prevents other things from taking that spot. As in, this stretch of the duodenum only has so many seats, and once species X is in that seat nothing else can take that until that individual of species X dies or some physical force removes it. This sort of model suggests that over time the community shifts from early colonists or opportunists to a stable community of long-lived species. It also suggests that if your gut is colonized by commensals or mutualists, they can physically prevent the invasion of later-arriving pathogens (or other commensals).
 
-2. **Facilitation**. You have undoubtedly run across this model. The first things to arrive somehow prepare the environment so that it better suits or facilitate the arrival of other species. Importantly, there is no intentionality here. The early arriving species do not set out to help others, but in doing what they do (e.g., maybe they end up leading to a thicker mucous layer) they somehow change the environment. This model, overall, suggests a specific sequence communities and the last, stable community is the one that does not change the environment. 
+2. **Facilitation**. You have undoubtedly run across this model. The first things to arrive somehow prepare the environment so that it better suits or _facilitates_ the arrival of other species. Importantly, there is no intentionality here. The early arriving species do not set out to help others, but in doing what they do (e.g., maybe they end up leading to a thicker mucous layer) they somehow change the environment. This model, overall, suggests a specific sequence of communities that stabilizes when the community members do not change the environment any further. This model suggests that pathogens will be most successful at invading when the microbial community is disrupted.
 
-3. **Tolerance**. This model, too, predicts a specific sequence of communities, but there is no facilitation. Rather, the idea is that later arriving species are better able to use limited resources or _tolerate_ a deteriorating environment. Species persist until they can no longer function with whatever meager resources are left, and the community overall moves towards the toughest, most hard-scrabble species. (It's hard to imagine this is the case in the gut, where resources are constantly replenished, but maybe on the skin?)
+3. **Tolerance**. This model, too, predicts a specific sequence of communities, but requires no facilitation. Rather, the idea is that later arriving species are better able to use or _tolerate_ increasingly limited resources. Species persist until they can no longer function with whatever meager resources are left, and the community overall moves towards the toughest, most hard-scrabble species. (It's hard to imagine this is the case in the gut, where resources are constantly replenished, but maybe on the skin?) It would seem to suggest that unless invading pathogens have very minimal resources requirements, they could only invade in earlier successional stage or if new resources were made available (e.g., an abrasion).
 
-Again, there could be elements of all three of these models at work, and probably other mechanisms, too. There are predators and parasites in this community, too. The environment is quite dynamics, too, diurnally, seasonally, and so on. Just like a rain forest! The point is not that we know how all of this works with much certainty, but rather that the notion you may have of the community consisting of a variety of bacteria each of which fits nicely into its own little niche is...simplistic^[OK, just plain wrong.]. Every ecosystem is complex, whether it's a basin in a rainforest or  us.
+It is interesting to note that all of these models seem to suggest that the community is more easily invaded by, for instance, a pathogen when it has been disturbed. This seems to be broadly consistent with our understanding of when pathogens invade our microbiomes. For instance, many opportunistic pathogens reach significant, problematic densities after a person has taken broad-spectrum antibiotics, which effectively kill off most of the gut microbiome. And those gut pathogens that are able to infect otherwise healthy people tend to be ones that dramatically change the environment. For instance, _Vibrio cholerae_ invade the small intestine and then start to produce toxins that cause terrible diarrhea, dramatically changing the conditions in the intestines. Interestingly, recent research suggests that normal, healthy microbiome of some individuals confers a degree of resistance to _V. cholerae_ invasion^[[Alavi et al. 2020. Interpersonal gut microbiome variation drives susceptibility and Resistance to cholera infection. Cell 181:1533-1546.e13](https://pubmed.ncbi.nlm.nih.gov/32631492/)]!
+
+In any case, these are models, not reality. There could be elements of all three of these models at work, and probably other mechanisms, too. For instance, microbial communities include predators and parasites^[Just like a rain forest!]. And the environment is quite dynamic diurnally, seasonally, and so on, which can increase overall diversity. It's complicated! The point is not that we know how all of this works with much certainty, though we do have some ideas about the important forces at work. Rather, I would like you to realize that the notion you may have of the community consisting of a variety of bacteria, each of which fits nicely into its own little niche is...simplistic^[OK, just plain wrong.]. There are varied and varying conditions. There are feedbacks and succession. There are myriad species interacting in myriad ways. In other words, ecosystems are complex, whether you're thinking of a watershed in a rainforest or the long tube running through the middle of us!
+
+
+# What does it do? 
+
+Let's be honest: as cool as it is to think of ourselves as ecosystems teaming with microbial life, most of us are really only interested in our microbiomes because of that it can do. By now most of us have heard stories about how many chronic diseases involving the gut seem to coincide with massive shifts in the gut microbiome; that is, there is a signature microbiome of a healthy versus unhealthy gut. While it is hard to disentangle cause and effect in these cases, early results on the efficacy of fecal microbiome transplants to treat colitis caused by _Clostridium difficile_ infections, Crohn's disease, irritable bowel syndrome and more strongly suggest that our gut microbiomes can protect us from disease. 
+
+It turns out that the same is true when we look at skin microbiomes. Research by my colleagues has shown that amphibians with a disrupted skin microbiome are more susceptible to lethal fungal infections than those with normal microbiomes^[[Bletz  et al. 2018 Disruption of skin microbiota contributes to salamander disease. Proc R Soc B 285:20180758](https://pubmed.ncbi.nlm.nih.gov/30135150/)] and treatment with a probiotic bacteria can provide protection^[Kueneman et al. 2016 Probiotic treatment restores protection against lethal fungal infection lost during amphibian captivity. Proc Biol Sci 283](https://pubmed.ncbi.nlm.nih.gov/27655769/)]. Other examples are being found in turtles and snakes and bats, to name just a few. Given their potential role in modulating or preventing infections, it is no wonder that an increasing number of studies look to the microbiome to explain patterns of susceptibility and resistance^[A word of warning: just because something like the microbiome _can_ explain differences in outcomes does mean that it is necessarily _important_ relative to other factors. There is a tendency for every new type of explanation to initially be viewed as playing an outsized role until there is sufficient counter-examples to spur a pushback and later recalibration, usually showing a much more moderate role. A little skepticism and reserve can go a long way when reading new, breathless claims!]. 
+
+Of course the human (and mouse and rat and pig) microbiome has also been shown to play an important role in our metabolism^[[Le et al. 2013 Richness of human gut microbiome correlates with metabolic markers. Nature 500:541-546](https://pubmed.ncbi.nlm.nih.gov/23985870/)]. Example from Pakistani study of kids with severe and moderate malnutrition, when they were provided supplemental food designed to move the children's microbiomes towards one seen in healthy children, their metabolism changed dramatically, and directionally, for months after the treatment. 
+There is a consistent difference in the microbiome between healthy and obese humans
+Have been calls for trying to alter host metabolism with microbiome transplant to reduce obesity 
+
+There are even studies showing a link between the human gut microbiome and a person's sense of wellbeing or happiness ... something about serotonin release?
+
+In short, it is becoming increasingly clear that our microbiomes play an important role in our health and wellbeing.  Moreover, we are already attempting to use our knowledge of the microbiome to improve our health. Medical researchers are already trying to find the key microbes, or in some cases molecules they secrete, that are responsible for these effects so that they can be better controlled and applied. However, ecologists and ecologically minded medical researchers are saying, "not so fast!" To understand why, let us approach the issue of function from an ecologist point of view. 
+
+# Diversity & function
+
+To an ecologist, the functions of a community or, similarly, the services provided by an ecosystem, usually related to the diversity in that community or ecosystem^[An ecosystem includes both the physical, abiotic environment as well as all of the biotic elements. For our purposes the distinction is not terribly important and I may use both terms to mean essentially the same thing: all of the microbes in and on us, plus us!]. That is, species poor communities, at the extreme, those consisting of only a single species, tend not to do the same things we care about as more diverse communities. In grasslands, for instance, more diverse communities are more robust to perturbations from drought^[Tillman REF]. More diverse forests often rebound faster from fire (REFS). More diverse marshes provide cleaner water (REFS). 
+
+Now one explanation for these diversity-function patterns is consistent with the approach of trying to isolate The Important Microbe^TM^. It is called the **sampling effect** and it simply implies that with more species there is an increase probability of including a species, maybe _the_ species, with a large effect. In this version of things, rare-but-influential species are the underlying cause of whatever function we're interested in.   So a more diverse microbiome means a greater chance that it includes a rare species with a large effect on, say, the host's metabolism. 
+
+## Function as an emergent property
+
+But this raises the question of whether a single species _could_ be responsible for most or even any effects of large magnitude. It likely requires many different species of bacteria to educate a developing immune system, prevent invasion by pathogens, or alter a host's metabolism in any appreciable way^[Imagine the other extreme, where a single species had huge effect on, say, your metabolism. If that species grew in number, would your metabolism increase dramatically? If it were reduced or extirpated from antibiotics, would you become obese?]. Indeed,  many if not most  beneficial effects of our microbiomes are probably emergent properties. That is, they likely do not stem from one species hidden amongst the myriad others, but rather they come from the actions (or interactions) of many. 
+
+Here's an analogy from the Dismal Science: what we call "the economy"---the suite of economic interactions that create and maintain jobs, lead to innovative projects, redistribute resources according to needs^[Or money, anyway!], and generally lead to less toil and a greater quality of life---is similar to a microbiome. The economy is not a product of the actions of any particular play or even any particular type of business. Rather, it is an emergent property of the whole of us going about our economic lives of working, buying, saving, and so on. Are there more and less important players in this economy? Of course! But the benefits we derive from the economy stem from the emergent properties that arise out of all of the few large and myriad small interactions. With this analogy in mind, consider these other ecological hypotheses about how function relates to diversity. 
+
+The **[insurance hypothesis](https://www.researchgate.net/publication/247844164_Rivets_and_Redundancy)" essentially says that with increased diversity a community has a certain redundancy of function which buffers the emergent property or function from variation in community dynamics or even extinctions. This hypothesis has also been dubbed the "rivet-popper" hypothesis by Paul Ehrlich^[He of _The Population Bomb_ fame and the resulting bet on the carrying capacity of humanity on Earth.]. Imagine, he said, imagine an airplane which has thousands of smaller subsystems that all need to work together for the airplane to fly; in essence, the plane is held together by a lot of rivets or equivalent parts. No imagine that every passenger removed a rivet after their flight. At first there would be enough redundancy that everything would be OK. Indeed, if there were some process of replacing rivets that were removed, it would probably be sustainable. But there is likely some threshold beyond which that airplane is going down! The same is presumably true in ecosystems large and small. In essence, a diversity of players means redundancy and redundancy means insurance against losses and buffering against variability. 
+
+The insurance hypothesis assumes that each player, whether a species or business or rivet, is essentially independent of one another^[Indeed, real-life insurance works best when the risks to one player (=insured) is  independent of this risk to others. When they are correlated the risk of everyone losing at the same time goes up...as do the costs of insurance!]. The **complementarity** hypothesis, on the other hand, emphasizes the non-independence of community members. It suggests that different plays offer potentially overlapping, but complementary functions such that a diverse group of species are able to _collectively_ do something better or more efficiently. For instance, a diverse group of birds, bats, bees, beetles, and so on do a better job of pollinating plants than a less diverse group that only includes a few of those species. Or a more diverse collection of book stores---some focused on best sellers, others specializing in used Sci-Fi papers backs, and still others that carry old scientific collections---make this particular author much happier than any one could.  
+
+It is easy to extend this thinking to a microbiome preventing the invasion of a pathogen in the gut. One species might have altered the chemical environment so that it is marginal for the pathogen, another maybe primed the immune system, while a third secretes chemicals that inhibit the pathogen from binding to host cells, and all of them simply take up space so that it is unavailable to the pathogen. Collectively they are much more effective than any one or two would be. 
+
+A third hypothesis about diversity and function, but certainly not the last, is **facilitation**. We are used to thinking of ecosystems as one where one organism's waste is another's resource. Indeed, this is certainly true when it comes to energy or nutrients in larger scale ecosystem. A plant is eaten by a grazer, and their poop is food for a whole other set of organisms. Not to mention that their sloppy grazing makes more food available for smaller grazers. Similarly, the nitrogen cycle requires a diversity of microbes. Consider just the step from nitrogen locked in detritus (dead leaves and branches) to the point where that nitrogen is again available to live, growing plants. The first step involves decomposers breaking down the amino acids, DNA, and so forth into smaller component parts. One of the byproducts is ammonia (really ammonium ion. NH~3+~). This is only marginally available for uptake by plants. However, the ammonia is an energy source for _Nitrosomonas_ spp. bacteria, which convert it to nitrite (NO~2-~), which is then converted into nitrate (NO~3-~) by _Nitrobacter_ spp. Nitrogen cycling is an emergent property of a community of interacting organisms, one facilitating the other. 
+
+Food web connectance (links/nodes^2, 0.03 -- 0.3) increases robustness
