--- a/Microbiome_Diversity.Rmd
+++ b/Microbiome_Diversity.Rmd
@@ -47,7 +47,7 @@ We have also come to recognize that much of what we, as humans, are is microbial
 # The human as a diversity hotspot
 In addition to sheer numbers, we harbor an [awful lot of microbial _diversity_](https://en.wikipedia.org/wiki/List_of_human_microbiota), too, on our skin, in our guts, in our mouths, and so on. How many species? It turns out that is a tricky question to answer clearly, in part because of how we detect and measure this diversity. The vast majority of bacteria are not culturable; we only know of them through their genetic sequences. In rough outline samples from the skin or gut or whatever are collected, all of the DNA extracted, and then short sequences of random bits of DNA from the sample are then sequenced. Computer algorithms are then used to compare these sequences to each other to find overlapping regions and make longer sequences, which are then compared to databases of sequences, and run through yet other algorithms to estimate the number of species (or sometimes gene families or metabolic pathways). So the question of how many species depends on how much sampling you've done^[Although there are ways of estimating the whole sample from a part.], the methods you used, and how you define a species. 
 
-Anyway, rough estimates are on the order 500 to 1000 bacterial species per person^[See Gilbert et al. 2018.]. That is a lot of diversity, but it actually pretty conservative. There is enough genetic diversity in these samples to suggest something on the order of 20 -- 50 subspecies or strains per bacterial species^[[Tierney et al. 2019. The Landscape of Genetic Content in the Gut and Oral Human Microbiome. Cell Host Microbe 26:283-295.e8](https://pubmed.ncbi.nlm.nih.gov/31415755)]. One recent analysis of some 3,655 samples found over 45,000,000 "non-redundant" genes! What's more, people often play host to unique microbes. Of those 45 million genes, _half_ were only found once! It is a staggering amount of genetic diversity in humans^[Moreover, most samples come from American and Western European people; there is much more diversity to be found!]. 
+Anyway, rough estimates are on the order 500 to 1000 bacterial species per person^[See Gilbert et al. 2018.]. That is a lot of diversity, but it is actually pretty conservative. There is enough genetic diversity in these samples to suggest something on the order of 20 -- 50 subspecies or strains per bacterial species^[[Tierney et al. 2019. The Landscape of Genetic Content in the Gut and Oral Human Microbiome. Cell Host Microbe 26:283-295.e8](https://pubmed.ncbi.nlm.nih.gov/31415755)]. One recent analysis of some 3,655 samples found over 45,000,000 "non-redundant" genes! What's more, people often play host to unique microbes. Of those 45 million genes, _half_ were only found once! It is a staggering amount of genetic diversity in humans^[Moreover, most samples come from American and Western European people; there is much more diversity to be found!]. 
 
 We have only begun to grasp this diversity in the last decade or so. The Human Microbiome Project, for instance, published its initial results in 2012. What is becoming clear is that while there are some commonalities, the microbiomes of different people can be quite different, and even the microbiome of an individual can change quite a lot over time. The microbial community even changes dramatically between different parts of the body!
 
@@ -69,11 +69,11 @@ knitr::include_graphics("Gut_Microbiome_Envt.png", dpi=300)
 ```
 
 
-This variation in habitat is mirrored by variation in microbial species. After all, while some microbes can inhabit a wide range of conditions and use a variety of substrates as food, others may be very specialized (again, just like in a rainforest). A certain species may grow (or persist) best in one particular place,  at least relative to others, while another species might "prefer" another place. This can result in what we call **niche partitioning**. The niche^[There are actually many definitions of "niche". I am using Hutchinson's n-dimensional hyper volume, which is a way of thinking about a species' fundamental niche. Importantly, a niche is not a physical place, but a set of conditions and resources. We would refer to the physical places a species as found as its range or distribution.], as you've probably learned at some point in your past, can be defined as the suite of conditions and resources required for individuals of a species to survive, grow, and reproduce. Presumably^[I say presumably because this is very difficult to demonstrate.] evolutionary processes often lead to species having different niches from one another (e.g., perhaps surviving at different temperatures, requiring different amounts of Fe and K, and so on), which leads to less competition between species.
+This variation in habitat is mirrored by variation in microbial species. After all, while some microbes can inhabit a wide range of conditions and use a variety of substrates as food, others may be very specialized (again, just like in a rainforest). A certain species may grow (or persist) best in one particular place,  at least relative to others, while another species might "prefer" another place. This can result in what we call **niche partitioning**. The niche^[There are actually many definitions of "niche". I am using Hutchinson's n-dimensional hyper volume, which is a way of thinking about a species' fundamental niche. Importantly, a niche is not a physical place, but a set of conditions and resources. We would refer to the physical places a species is found as its range or distribution.], as you've probably learned at some point in your past, can be defined as the suite of conditions and resources required for individuals of a species to survive, grow, and reproduce. Presumably^[I say presumably because this is very difficult to demonstrate.] evolutionary processes often lead to species having different niches from one another (e.g., perhaps surviving at different temperatures, requiring different amounts of Fe and K, and so on), which leads to less competition between species.
 
 Certainly there is some fine-scale matching between the niches of microbial species and the distinct nooks and crannies in and on us.  But this alone cannot explain the tremendous diversity we observe. What, then, produces this diversity? This is an active area of research^[Meaning that we really do not know!]. Still, we can think through it in the same way we might ask about the diversity in any community^[Yes, it is very cool to think of ourselves as ecosystems---we are!---but we are not exactly unique as ecosystems. What applies to the Palouse or a rainforest applies equally well to us!].  
 
-First, it is important to note that the microbes in and on us ultimately come from our environment, from the birth canal and our mother's milk to all that dirt we eat at kids and the air we breath. But it is not as if _everything_ we come across successfully colonizes us. Our microbiome is a small, unique subset of bacteria in the broader world. That is, there is a great deal of selection against most bacteria we encounter; most do not make the cut! Interestingly, if you change your, say, internal environmental conditions (e.g., become a vegetarian or get a GI infection), the composition of your gut microbiome changes somewhat in response. The conditions do matter! In any case, recognize that only a subset microbes can actually be part of our microbiomes.
+First, it is important to note that the microbes in and on us ultimately come from our environment, from the birth canal and our mother's milk to all that dirt we eat at kids and the air we breath. But it is not as if _everything_ we come across successfully colonizes us. Our microbiome is a small, unique subset of bacteria in the broader world. That is, there is a great deal of selection against most bacteria we encounter; most do not make the cut! Interestingly, if you change your, say, internal environmental conditions (e.g., become a vegetarian or get a GI infection), the composition of your gut microbiome changes somewhat in response. The conditions do matter! In any case, recognize that only a subset of microbes can actually be part of our microbiomes.
 
 But focusing on those potential successful colonists, what controls whether they establish or not? Or in other words, how does our microbiome develop? Again, it's an active area of research, but let me offer three "models" of community assembly^[Introduced by Connell & Slatyer in 1977 ([Am Nat 111:1119-1144](https://www.journals.uchicago.edu/doi/10.1086/283241)), and largely applied to plant communities, these models still influence our thinking of community dynamics in general.] that may help explain why we end up with the communities we do. I do not want to imply that these processes are what is happening in our guts, at least not exactly, but it does help illustrate the processes that may be at work, as well as how ecologists think through such a process.
 
@@ -81,7 +81,7 @@ But focusing on those potential successful colonists, what controls whether they
 
 2. **Facilitation**. You have undoubtedly run across this model. The first things to arrive somehow prepare the environment so that it better suits or _facilitates_ the arrival of other species. Importantly, there is no intentionality here. The early arriving species do not set out to help others, but in doing what they do (e.g., maybe they end up leading to a thicker mucous layer) they somehow change the environment. This model, overall, suggests a specific sequence of communities that stabilizes when the community members do not change the environment any further. This model suggests that pathogens will be most successful at invading when the microbial community is disrupted.
 
-3. **Tolerance**. This model, too, predicts a specific sequence of communities, but requires no facilitation. Rather, the idea is that later arriving species are better able to use or _tolerate_ increasingly limited resources. Species persist until they can no longer function with whatever meager resources are left, and the community overall moves towards the toughest, most hard-scrabble species. (It's hard to imagine this is the case in the gut, where resources are constantly replenished, but maybe on the skin?) It would seem to suggest that unless invading pathogens have very minimal resources requirements, they could only invade in earlier successional stage or if new resources were made available (e.g., an abrasion).
+3. **Tolerance**. This model, too, predicts a specific sequence of communities, but requires no facilitation. Rather, the idea is that later arriving species are better able to use or _tolerate_ increasingly limited resources. Species persist until they can no longer function with whatever meager resources are left, and the community overall moves towards the toughest, most hard-scrabble species. (It's hard to imagine this is the case in the gut, where resources are constantly replenished, but maybe on the skin?) It would seem to suggest that unless invading pathogens have very minimal resource requirements, they could only invade in earlier successional stage or if new resources were made available (e.g., an abrasion).
 
 It is interesting to note that all of these models seem to suggest that the community is more easily invaded by, for instance, a pathogen when it has been disturbed. This seems to be broadly consistent with our understanding of when pathogens invade our microbiomes. For instance, many opportunistic pathogens reach significant, problematic densities after a person has taken broad-spectrum antibiotics, which effectively kill off most of the gut microbiome. And those gut pathogens that are able to infect otherwise healthy people tend to be ones that dramatically change the environment. For instance, _Vibrio cholerae_ invade the small intestine and then start to produce toxins that cause terrible diarrhea, dramatically changing the conditions in the intestines. Interestingly, recent research suggests that normal, healthy microbiome of some individuals confers a degree of resistance to _V. cholerae_ invasion^[[Alavi et al. 2020. Interpersonal gut microbiome variation drives susceptibility and Resistance to cholera infection. Cell 181:1533-1546.e13](https://pubmed.ncbi.nlm.nih.gov/32631492/)]!
 
@@ -110,13 +110,13 @@ Now one explanation for these diversity-function patterns is consistent with the
 
 ## Function as an emergent property
 
-But this raises the question of whether a single species _could_ be responsible for most or even any effects of large magnitude. It likely requires many different species of bacteria to educate a developing immune system, prevent invasion by pathogens, or alter a host's metabolism in any appreciable way^[Imagine the other extreme, where a single species had huge effect on, say, your metabolism. If that species grew in number, would your metabolism increase dramatically? If it were reduced or extirpated from antibiotics, would you become obese?]. Indeed,  many if not most  beneficial effects of our microbiomes are probably emergent properties. That is, they likely do not stem from one species hidden amongst the myriad others, but rather they come from the actions (or interactions) of many. 
+But this raises the question of whether a single species _could_ be responsible for most or even any effects of large magnitude. It likely requires many different species of bacteria to educate a developing immune system, prevent invasion by pathogens, or alter a host's metabolism in any appreciable way^[Imagine the other extreme, where a single species had huge effect on, say, your metabolism. If that species grew in number, would your metabolism increase dramatically? If it were reduced or extirpated from antibiotics, would you become obese?]. Indeed,  many if not most  beneficial effects of our microbiomes are probably emergent properties. That is, they likely do not stem from one species hidden among the innumerable others, but rather they come from the actions (or interactions) of many. 
 
-Here's an analogy from the Dismal Science: what we call "the economy"---the suite of economic interactions that create and maintain jobs, lead to innovative projects, redistribute resources according to needs^[Or money, anyway!], and generally lead to less toil and a greater quality of life---is similar to a microbiome. The economy is not a product of the actions of any particular play or even any particular type of business. Rather, it is an emergent property of the whole of us going about our economic lives of working, buying, saving, and so on. Are there more and less important players in this economy? Of course! But the benefits we derive from the economy stem from the emergent properties that arise out of all of the few large and myriad small interactions. With this analogy in mind, consider these other ecological hypotheses about how function relates to diversity. 
+Here's an analogy from the Dismal Science: what we call "the economy"---the suite of economic interactions that create and maintain jobs, lead to innovative projects, redistribute resources according to needs^[Or money, anyway!], and generally lead to less toil and a greater quality of life---is similar to a microbiome. The economy is not a product of the actions of any particular play or even any particular type of business. Rather, it is an emergent property of the whole of us going about our economic lives of working, buying, saving, and so on. Are there more and less important players in this economy? Of course! But the benefits we derive from the economy stem from the emergent properties that arise out of all of the few large and multitudinous small interactions. With this analogy in mind, consider these other ecological hypotheses about how function relates to diversity. 
 
 The **[insurance hypothesis](https://www.researchgate.net/publication/247844164_Rivets_and_Redundancy)" essentially says that with increased diversity a community has a certain redundancy of function which buffers the emergent property or function from variation in community dynamics or even extinctions. This hypothesis has also been dubbed the "rivet-popper" hypothesis by Paul Ehrlich^[He of _The Population Bomb_ fame and the resulting bet on the carrying capacity of humanity on Earth.]. Imagine, he said, imagine an airplane which has thousands of smaller subsystems that all need to work together for the airplane to fly; in essence, the plane is held together by a lot of rivets or equivalent parts. No imagine that every passenger removed a rivet after their flight. At first there would be enough redundancy that everything would be OK. Indeed, if there were some process of replacing rivets that were removed, it would probably be sustainable. But there is likely some threshold beyond which that airplane is going down! The same is presumably true in ecosystems large and small. In essence, a diversity of players means redundancy and redundancy means insurance against losses and buffering against variability. 
 
-The insurance hypothesis assumes that each player, whether a species or business or rivet, is essentially independent of one another^[Indeed, real-life insurance works best when the risks to one player (=insured) is  independent of this risk to others. When they are correlated the risk of everyone losing at the same time goes up...as do the costs of insurance!]. The **complementarity** hypothesis, on the other hand, emphasizes the non-independence of community members. It suggests that different plays offer potentially overlapping, but complementary functions such that a diverse group of species are able to _collectively_ do something better or more efficiently. For instance, a diverse group of birds, bats, bees, beetles, and so on do a better job of pollinating plants than a less diverse group that only includes a few of those species. Or a more diverse collection of book stores---some focused on best sellers, others specializing in used Sci-Fi papers backs, and still others that carry old scientific collections---make this particular author much happier than any one could.  
+The insurance hypothesis assumes that each player, whether a species or business or rivet, is essentially independent of one another^[Indeed, real-life insurance works best when the risks to one player (=insured) is  independent of this risk to others. When they are correlated the risk of everyone losing at the same time goes up...as do the costs of insurance!]. The **complementarity** hypothesis, on the other hand, emphasizes the non-independence of community members. It suggests that different plays offer potentially overlapping, but complementary functions such that a diverse group of species are able to _collectively_ do something better or more efficiently. For instance, a diverse group of birds, bats, bees, beetles, and so on do a better job of pollinating plants than a less diverse group that only includes a few of those species. Or a more diverse collection of book stores---some focused on best sellers, others specializing in used Sci-Fi paperbacks, and still others that carry old scientific collections---make this particular author much happier than any one could.  
 
 It is easy to extend this thinking to a microbiome preventing the invasion of a pathogen in the gut. One species might have altered the chemical environment so that it is marginal for the pathogen, another maybe primed the immune system, while a third secretes chemicals that inhibit the pathogen from binding to host cells, and all of them simply take up space so that it is unavailable to the pathogen. Collectively they are much more effective than any one or two would be. 
 
